wc-ng v0.7.2 2014-xx-xx

  added:
    - '/wcver [1]' which represents the current version of the client
      '/wcversion' should be avoided from now on
    - server accross chat
    - sdl2 port (by pisto)
    - hwtemp plugin (windows, linux and OS X)
    - hwtemp hud display (windows, linux and OS X)
    - support for multiple master servers (/addmasterserver, /delmasterserver)
    - requireplugin cubescript function
    - servcmd event (N_SERVCMD)
    - playerdisplaymaxteams variable
    - '/resolveip' cubescript function
    - FreeBSD 10.x support (amd64)
    - '/stripextdemo': strip extinfo out of demos
    - '/recompressdemo': recompress demos with a different recompression level
    - '/getactioncn': useful for video streaming
    - '/autofollowactioncn': useful for video streaming
    - '/resolveip <ip>': resolve given ip address to its respective hostname
    - '/scoreboardtextcolor': change scoreboard text color
    - '/scoreboardtextcolorhead': change scoreboard text color

  changed:
    - in sync with sauerbraten r5058
    - libcurl update to 7.39.0
    - libgeoip update to 1.6.0
    - windows client is now linked statically against its required libs
    - all client packages are now built with link time optimization

  enhanced:
    - demorecorder can now record coop-edit "games"
    - server country is now shown in the scoreboard
    - '/statsdisplayfmt' allows now game mode specific stats formatting
    - '/httprequest': added support for the https protocol**

  fixed:
    - server browser capture team scores
    - player display: scaling of shown players per team
    - fixed "failed to create demo directory" issue
    - showservermod / showserveruptime not being shown in coop edit
    - and other fixes and improvements

Some features had to be dropped due to a persons arrogancy (you may imagine
whom it is). I have tried everything to solve this, but he didn't answer to my