@@ -1,0 +1,5 @@
+document:
+- '/wcver'
+- '/wcrev'
+- '/wcchatloopclients'
+- '/wcchatisconnected'
