@@ -5,7 +5,7 @@
 
 constexpr int WC_VERSION_MAJOR = 0;
 constexpr int WC_VERSION_MINOR = 7;
-constexpr int WC_VERSION_PATCH = 2;
+constexpr int WC_VERSION_PATCH = 3;
 
 #undef major
 #undef minor
