@@ -22,7 +22,7 @@ isinlist = [
 checkwcng = [
     if (= $numargs 0) [
         if (= (getvarmin wcversion) 1200) [
-            return_val = 1
+            return_val = (wcver ">=" "0.7.3")
         ] [
             return_val = 0
         ]
