@@ -23,3 +23,6 @@ load_conf demos
 
 // load extinfo scripts
 load_conf extinfo
+
+// load global chat scripts
+load_conf global_chat
