@@ -159,7 +159,7 @@ f_show_wc_ng_settings = [
 
 newgui "WCError" [
     guitext "^f3ERROR:" 0
-    guitext "You're not using WC." 0
+    guitext "You are not using WC-NG >= 0.7.3." 0
     guitext "Get it at http://wc-ng.sauerworld.org" 0
 ]
 
