@@ -76,21 +76,6 @@ statsdisplaysettings = [
     ]
 ]
 
-newgui "Highlight-Level" [
-        guibutton "Off" "highlight 0";
-        guibutton "Red" "highlight 1";
-        guibutton "Blinking" "highlight 2";
-        guibutton "Colorloop" "highlight 3";
-]
-
-newgui "Lock Captureweapons" [
-        guibutton (gunname 1) "say #lock captureweapons 1";
-        guibutton (gunname 2) "say #lock captureweapons 2";
-        guibutton (gunname 3) "say #lock captureweapons 3";
-        guibutton (gunname 4) "say #lock captureweapons 4";
-        guibutton (gunname 5) "say #lock captureweapons 5";
-]
-
 f_show_wc_ng_menu = [
     guistayopen [
     guititle "General Configuration"
@@ -132,19 +117,23 @@ f_show_wc_ng_menu = [
     ]
 
     guilist [
-        guibutton "^f0List Plugins "    "listplugins"
+        guibutton "^f0List Plugins "         "listloadedplugins"
     ]
 
     guitab "wc-ng settings 2"
 
+    guititle "Global Chat"
+    guibutton "Global Chat"                  [showgui $gchat_gui_name]
+    guibar
+
     guititle  "Extinfo"
     guicheckbox "Use Extinfo Server Browser" extinfoserverbrowser
-    guibutton "Find Players" [showgui $extinfo_player_search_guiname]
+    guibutton "Find Players"                 [showgui $extinfo_player_search_guiname]
     guibar
 
     guititle  "Demo"
-    guibutton "Demo Recorder" "demorecordergui"
-    guibutton "Search Demo"   "searchdemogui"
+    guibutton "Demo Recorder"                "demorecordergui"
+    guibutton "Search Demo"                  "searchdemogui"
     //guibar
 
     ]// end guistayopen
